upgrade to falcosidekick 2.30.0
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -54,10 +54,16 @@ data:
   TEAMS_ACTIVITYIMAGE: "{{ .Values.config.teams.activityimage | b64enc }}"
   TEAMS_MINIMUMPRIORITY: "{{ .Values.config.teams.minimumpriority | b64enc }}"
 
-  # Datadog Output
+  # Datadog (Events) Output
   DATADOG_APIKEY: "{{ .Values.config.datadog.apikey | b64enc }}"
   DATADOG_HOST: "{{ .Values.config.datadog.host | b64enc }}"
   DATADOG_MINIMUMPRIORITY: "{{ .Values.config.datadog.minimumpriority | b64enc }}"
+
+  # Datadog Logs Output
+  DATADOGLOGS_APIKEY: "{{ .Values.config.datadoglogs.apikey | b64enc }}"
+  DATADOGLOGS_HOST: "{{ .Values.config.datadoglogs.host | b64enc }}"
+  DATADOGLOGS_SERVICE: "{{ .Values.config.datadoglogs.service | b64enc }}"
+  DATADOGLOGS_MINIMUMPRIORITY: "{{ .Values.config.datadoglogs.minimumpriority | b64enc }}"
 
   # AlertManager Output
   ALERTMANAGER_HOSTPORT: "{{ .Values.config.alertmanager.hostport | b64enc }}"
@@ -179,17 +185,24 @@ data:
   ELASTICSEARCH_HOSTPORT: "{{ .Values.config.elasticsearch.hostport | b64enc }}"
   ELASTICSEARCH_INDEX: "{{ .Values.config.elasticsearch.index | b64enc }}"
   ELASTICSEARCH_TYPE: "{{ .Values.config.elasticsearch.type | b64enc }}"
+  ELASTICSEARCH_PIPELINE: "{{ .Values.config.elasticsearch.pipeline | b64enc }}"
   ELASTICSEARCH_SUFFIX: "{{ .Values.config.elasticsearch.suffix | b64enc }}"
-  ELASTICSEARCH_MINIMUMPRIORITY: "{{ .Values.config.elasticsearch.minimumpriority | b64enc }}"
-  ELASTICSEARCH_MUTUALTLS: "{{ .Values.config.elasticsearch.mutualtls | printf "%t" | b64enc }}"
-  ELASTICSEARCH_CHECKCERT: "{{ .Values.config.elasticsearch.checkcert | printf "%t" | b64enc }}"
+  ELASTICSEARCH_APIKEY: "{{ .Values.config.elasticsearch.apikey | b64enc }}"
   ELASTICSEARCH_USERNAME: "{{ .Values.config.elasticsearch.username | b64enc }}"
   ELASTICSEARCH_PASSWORD: "{{ .Values.config.elasticsearch.password | b64enc }}"
   ELASTICSEARCH_FLATTENFIELDS: "{{ .Values.config.elasticsearch.flattenfields | printf "%t" | b64enc }}"
   ELASTICSEARCH_CREATEINDEXTEMPLATE: "{{ .Values.config.elasticsearch.createindextemplate | printf "%t" | b64enc }}"
+  ELASTICSEARCH_ENABLECOMPRESSION: "{{ .Values.config.elasticsearch.enablecompression | printf "%t" | b64enc }}"
+  ELASTICSEARCH_MAXCONCURRENTREQUESTS: "{{ .Values.config.elasticsearch.maxconcurrentrequests | toString | b64enc }}"
+  ELASTICSEARCH_BATCHING_ENABLED: "{{ .Values.config.elasticsearch.batching.enabled | printf "%t" | b64enc }}"
+  ELASTICSEARCH_BATCHING_BATCHSIZE: "{{ .Values.config.elasticsearch.batching.batchsize | toString | b64enc }}"
+  ELASTICSEARCH_BATCHING_FLUSHINTERVAL: "{{ .Values.config.elasticsearch.batching.flushinterval | b64enc }}"
   ELASTICSEARCH_NUMBEROFSHARDS: "{{ .Values.config.elasticsearch.numberofshards | toString | b64enc }}"
   ELASTICSEARCH_NUMBEROFREPLICAS: "{{ .Values.config.elasticsearch.numberofreplicas | toString | b64enc }}"
   ELASTICSEARCH_CUSTOMHEADERS: "{{ .Values.config.elasticsearch.customheaders | b64enc }}"
+  ELASTICSEARCH_MUTUALTLS: "{{ .Values.config.elasticsearch.mutualtls | printf "%t" | b64enc }}"
+  ELASTICSEARCH_CHECKCERT: "{{ .Values.config.elasticsearch.checkcert | printf "%t" | b64enc }}"
+  ELASTICSEARCH_MINIMUMPRIORITY: "{{ .Values.config.elasticsearch.minimumpriority | b64enc }}"
 
   # Loki Output
   LOKI_HOSTPORT: "{{ .Values.config.loki.hostport | b64enc }}"
@@ -220,11 +233,11 @@ data:
   STAN_MUTUALTLS: "{{ .Values.config.stan.mutualtls | printf "%t" | b64enc }}"
   STAN_CHECKCERT: "{{ .Values.config.stan.checkcert | printf "%t" | b64enc }}"
 
-  # Statsd
+  # Statsd Output
   STATSD_FORWARDER: "{{ .Values.config.statsd.forwarder | b64enc }}"
   STATSD_NAMESPACE: "{{ .Values.config.statsd.namespace | b64enc }}"
 
-  # Dogstatsd
+  # Dogstatsd Output
   DOGSTATSD_FORWARDER: "{{ .Values.config.dogstatsd.forwarder | b64enc }}"
   DOGSTATSD_NAMESPACE: "{{ .Values.config.dogstatsd.namespace | b64enc }}"
   DOGSTATSD_TAGS: "{{ .Values.config.dogstatsd.tags | b64enc }}"
@@ -270,7 +283,7 @@ data:
   KUBELESS_MUTUALTLS: "{{ .Values.config.kubeless.mutualtls | printf "%t" | b64enc }}"
   KUBELESS_CHECKCERT: "{{ .Values.config.kubeless.checkcert | printf "%t" | b64enc }}"
 
-  # OpenFaaS
+  # OpenFaaS Output
   OPENFAAS_GATEWAYNAMESPACE: "{{ .Values.config.openfaas.gatewaynamespace | b64enc }}"
   OPENFAAS_GATEWAYSERVICE: "{{ .Values.config.openfaas.gatewayservice | b64enc }}"
   OPENFAAS_FUNCTIONNAME: "{{ .Values.config.openfaas.functionname | b64enc }}"
@@ -346,14 +359,14 @@ data:
   KAFKAREST_MUTUALTLS: "{{ .Values.config.kafkarest.mutualtls | printf "%t" | b64enc}}"
   KAFKAREST_CHECKCERT: "{{ .Values.config.kafkarest.checkcert | printf "%t" | b64enc}}"
 
-  # Syslog
+  # Syslog Output
   SYSLOG_HOST: "{{ .Values.config.syslog.host | b64enc}}"
   SYSLOG_PORT: "{{ .Values.config.syslog.port | toString | b64enc}}"
   SYSLOG_PROTOCOL: "{{ .Values.config.syslog.protocol | b64enc}}"
   SYSLOG_FORMAT: "{{ .Values.config.syslog.format | b64enc}}"
   SYSLOG_MINIMUMPRIORITY: "{{ .Values.config.syslog.minimumpriority | b64enc}}"
 
-  # Zoho Cliq
+  # Zoho Cliq Output
   CLIQ_WEBHOOKURL: "{{ .Values.config.cliq.webhookurl | b64enc}}"
   CLIQ_ICON: "{{ .Values.config.cliq.icon | b64enc}}"
   CLIQ_USEEMOJI: "{{ .Values.config.cliq.useemoji | printf "%t" | b64enc}}"
@@ -361,14 +374,14 @@ data:
   CLIQ_MESSAGEFORMAT: "{{ .Values.config.cliq.messageformat | b64enc}}"
   CLIQ_MINIMUMPRIORITY: "{{ .Values.config.cliq.minimumpriority | b64enc}}"
 
-  # Policy Reporter
+  # Policy Reporter Output
   POLICYREPORT_ENABLED: "{{ .Values.config.policyreport.enabled | printf "%t"| b64enc}}"
   POLICYREPORT_KUBECONFIG: "{{ .Values.config.policyreport.kubeconfig | b64enc}}"
   POLICYREPORT_MAXEVENTS: "{{ .Values.config.policyreport.maxevents | toString | b64enc}}"
   POLICYREPORT_PRUNEBYPRIORITY: "{{ .Values.config.policyreport.prunebypriority | printf "%t" | b64enc}}"
   POLICYREPORT_MINIMUMPRIORITY: "{{ .Values.config.policyreport.minimumpriority | b64enc}}"
 
-  # Node Red
+  # Node Red Output
   NODERED_ADDRESS: "{{ .Values.config.nodered.address | b64enc}}"
   NODERED_USER: "{{ .Values.config.nodered.user | b64enc}}"
   NODERED_PASSWORD: "{{ .Values.config.nodered.password | b64enc}}"
@@ -376,7 +389,7 @@ data:
   NODERED_CHECKCERT: "{{ .Values.config.nodered.checkcert | printf "%t" | b64enc}}"
   NODERED_MINIMUMPRIORITY: "{{ .Values.config.nodered.minimumpriority | b64enc}}"
 
-  # MQTT
+  # MQTT Output
   MQTT_BROKER: "{{ .Values.config.mqtt.broker | b64enc}}"
   MQTT_TOPIC: "{{ .Values.config.mqtt.topic | b64enc}}"
   MQTT_QOS: "{{ .Values.config.mqtt.qos | toString | b64enc}}"
@@ -386,7 +399,7 @@ data:
   MQTT_CHECKCERT: "{{ .Values.config.mqtt.checkcert | printf "%t" | b64enc}}"
   MQTT_MINIMUMPRIORITY: "{{ .Values.config.mqtt.minimumpriority | b64enc}}"
 
-  # Zincsearch
+  # Zincsearch Output
   ZINCSEARCH_HOSTPORT: "{{ .Values.config.zincsearch.hostport | b64enc}}"
   ZINCSEARCH_INDEX: "{{ .Values.config.zincsearch.index | b64enc}}"
   ZINCSEARCH_USERNAME: "{{ .Values.config.zincsearch.username | b64enc}}"
@@ -394,19 +407,19 @@ data:
   ZINCSEARCH_CHECKCERT: "{{ .Values.config.zincsearch.checkcert | printf "%t" | b64enc}}"
   ZINCSEARCH_MINIMUMPRIORITY: "{{ .Values.config.zincsearch.minimumpriority | b64enc}}"
 
-  # Gotify
+  # Gotify Output
   GOTIFY_HOSTPORT: "{{ .Values.config.gotify.hostport | b64enc}}"
   GOTIFY_TOKEN: "{{ .Values.config.gotify.token | b64enc}}"
   GOTIFY_FORMAT: "{{ .Values.config.gotify.format | b64enc}}"
   GOTIFY_CHECKCERT: "{{ .Values.config.gotify.checkcert | printf "%t" | b64enc}}"
   GOTIFY_MINIMUMPRIORITY: "{{ .Values.config.gotify.minimumpriority | b64enc}}"
 
-  # Tekton
+  # Tekton Output
   TEKTON_EVENTLISTENER: "{{ .Values.config.tekton.eventlistener | b64enc}}"
   TEKTON_CHECKCERT: "{{ .Values.config.tekton.checkcert | printf "%t" | b64enc}}"
   TEKTON_MINIMUMPRIORITY: "{{ .Values.config.tekton.minimumpriority | b64enc}}"
 
-  # Spyderbat
+  # Spyderbat Output
   SPYDERBAT_ORGUID: "{{ .Values.config.spyderbat.orguid | b64enc}}"
   SPYDERBAT_APIKEY: "{{ .Values.config.spyderbat.apikey | b64enc}}"
   SPYDERBAT_APIURL: "{{ .Values.config.spyderbat.apiurl | b64enc}}"
@@ -414,7 +427,7 @@ data:
   SPYDERBAT_SOURCEDESCRIPTION: "{{ .Values.config.spyderbat.sourcedescription | b64enc}}"
   SPYDERBAT_MINIMUMPRIORITY: "{{ .Values.config.spyderbat.minimumpriority | b64enc}}"
 
-  # TimescaleDB
+  # TimescaleDB Output
   TIMESCALEDB_HOST: "{{ .Values.config.timescaledb.host | b64enc}}"
   TIMESCALEDB_PORT: "{{ .Values.config.timescaledb.port | toString | b64enc}}"
   TIMESCALEDB_USER: "{{ .Values.config.timescaledb.user | b64enc}}"
@@ -434,6 +447,7 @@ data:
   # TELEGRAM Output
   TELEGRAM_TOKEN: "{{ .Values.config.telegram.token | b64enc}}"
   TELEGRAM_CHATID: "{{ .Values.config.telegram.chatid | b64enc}}"
+  TELEGRAM_MESSAGE_THREAD_ID: "{{ .Values.config.telegram.messagethreadid | b64enc}}"
   TELEGRAM_MINIMUMPRIORITY: "{{ .Values.config.telegram.minimumpriority | b64enc}}"
   TELEGRAM_CHECKCERT: "{{ .Values.config.telegram.checkcert | printf "%t" | b64enc}}"
 
@@ -455,13 +469,13 @@ data:
   OPENOBSERVE_STREAMNAME: "{{ .Values.config.openobserve.streamname | b64enc}}"
   OPENOBSERVE_MINIMUMPRIORITY: "{{ .Values.config.openobserve.minimumpriority | b64enc}}"
 
-  # Dynatrace
+  # Dynatrace Output
   DYNATRACE_APITOKEN: "{{ .Values.config.dynatrace.apitoken | b64enc}}"
   DYNATRACE_APIURL: "{{ .Values.config.dynatrace.apiurl | b64enc}}"
   DYNATRACE_CHECKCERT: "{{ .Values.config.dynatrace.checkcert | printf "%t" | b64enc}}"
   DYNATRACE_MINIMUMPRIORITY: "{{ .Values.config.dynatrace.minimumpriority | b64enc}}"
 
-  # OTLP Traces
+  # OTLP Traces Output
   OTLP_TRACES_ENDPOINT: "{{ .Values.config.otlp.traces.endpoint | b64enc}}"
   OTLP_TRACES_PROTOCOL: "{{ .Values.config.otlp.traces.protocol | b64enc}}"
   OTLP_TRACES_TIMEOUT: "{{ .Values.config.otlp.traces.timeout | toString | b64enc}}"
@@ -470,8 +484,19 @@ data:
   OTLP_TRACES_DURATION: "{{ .Values.config.otlp.traces.duration | toString | b64enc}}"
   OTLP_TRACES_CHECKCERT: "{{ .Values.config.otlp.traces.checkcert | printf "%t" | b64enc}}"
   OTLP_TRACES_MINIMUMPRIORITY: "{{ .Values.config.otlp.traces.minimumpriority | b64enc}}"
+  # OTLP Metrics Output
+  OTLP_METRICS_ENDPOINT: "{{ .Values.config.otlp.metrics.endpoint | b64enc}}"
+  OTLP_METRICS_PROTOCOL: "{{ .Values.config.otlp.metrics.protocol | b64enc}}"
+  OTLP_METRICS_TIMEOUT: "{{ .Values.config.otlp.metrics.timeout | toString | b64enc}}"
+  OTLP_METRICS_HEADERS: "{{ .Values.config.otlp.metrics.headers | b64enc}}"
+  OTLP_METRICS_EXTRAATTRIBUTES: "{{ .Values.config.otlp.metrics.extraattributes | b64enc}}"
+  {{- range $key, $value := .Values.config.otlp.metrics.extraenvvars }}
+  {{ $key }}: "{{ $value | b64enc }}"
+  {{- end }}
+  OTLP_METRICS_CHECKCERT: "{{ .Values.config.otlp.metrics.checkcert | printf "%t" | b64enc}}"
+  OTLP_METRICS_MINIMUMPRIORITY: "{{ .Values.config.otlp.metrics.minimumpriority | b64enc}}"
 
-  # Sumologic
+  # Sumologic Output
   SUMOLOGIC_RECEIVERURL: "{{ .Values.config.sumologic.receiverURL | b64enc}}"
   SUMOLOGIC_SOURCECATEGORY: "{{ .Values.config.sumologic.sourceCategory | b64enc}}"
   SUMOLOGIC_SOURCEHOST: "{{ .Values.config.sumologic.sourceHost | b64enc}}"
@@ -479,7 +504,7 @@ data:
   SUMOLOGIC_CHECKCERT: "{{ .Values.config.sumologic.checkcert | printf "%t" | b64enc}}"
   SUMOLOGIC_MINIMUMPRIORITY: "{{ .Values.config.sumologic.minimumpriority | b64enc}}"
 
-  # Quickwit
+  # Quickwit Output
   QUICKWIT_HOSTPORT: "{{ .Values.config.quickwit.hostport | b64enc}}"
   QUICKWIT_APIENDPOINT: "{{ .Values.config.quickwit.apiendpoint | b64enc}}"
   QUICKWIT_INDEX: "{{ .Values.config.quickwit.index | b64enc}}"
@@ -490,7 +515,12 @@ data:
   QUICKWIT_MUTUALTLS: "{{ .Values.config.quickwit.mutualtls | printf "%t" | b64enc}}"
   QUICKWIT_MINIMUMPRIORITY: "{{ .Values.config.quickwit.minimumpriority | b64enc}}"
 
-  # Talon
+  # Webex Output
+  WEBEX_WEBHOOKURL: "{{ .Values.config.webex.webhookurl | b64enc}}"
+  WEBEX_CHECKCERT: "{{ .Values.config.webex.checkcert | printf "%t" | b64enc}}"
+  WEBEX_MINIMUMPRIORITY: "{{ .Values.config.webex.minimumpriority | b64enc}}"
+
+  # Talon Output
   TALON_ADDRESS: "{{ .Values.config.talon.address | b64enc}}"
   TALON_CHECKCERT: "{{ .Values.config.talon.checkcert | printf "%t" | b64enc}}"
   TALON_MINIMUMPRIORITY: "{{ .Values.config.talon.minimumpriority | b64enc}}"
