fix value conversions errors
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -195,7 +195,7 @@ data:
   ELASTICSEARCH_ENABLECOMPRESSION: "{{ .Values.config.elasticsearch.enablecompression | printf "%t" | b64enc }}"
   ELASTICSEARCH_MAXCONCURRENTREQUESTS: "{{ .Values.config.elasticsearch.maxconcurrentrequests | toString | b64enc }}"
   ELASTICSEARCH_BATCHING_ENABLED: "{{ .Values.config.elasticsearch.batching.enabled | printf "%t" | b64enc }}"
-  ELASTICSEARCH_BATCHING_BATCHSIZE: "{{ .Values.config.elasticsearch.batching.batchsize | toString | b64enc }}"
+  ELASTICSEARCH_BATCHING_BATCHSIZE: "{{ .Values.config.elasticsearch.batching.batchsize | b64enc }}"
   ELASTICSEARCH_BATCHING_FLUSHINTERVAL: "{{ .Values.config.elasticsearch.batching.flushinterval | b64enc }}"
   ELASTICSEARCH_NUMBEROFSHARDS: "{{ .Values.config.elasticsearch.numberofshards | toString | b64enc }}"
   ELASTICSEARCH_NUMBEROFREPLICAS: "{{ .Values.config.elasticsearch.numberofreplicas | toString | b64enc }}"
@@ -517,7 +517,6 @@ data:
 
   # Webex Output
   WEBEX_WEBHOOKURL: "{{ .Values.config.webex.webhookurl | b64enc}}"
-  WEBEX_CHECKCERT: "{{ .Values.config.webex.checkcert | printf "%t" | b64enc}}"
   WEBEX_MINIMUMPRIORITY: "{{ .Values.config.webex.minimumpriority | b64enc}}"
 
   # Talon Output
