--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -722,6 +722,19 @@ config:
     checkcert: true
     # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
     minimumpriority: ""
+    # -- dashboards contains configuration for grafana dashboards.
+    dashboards:
+      falcosidekickLoki:
+        # -- enabled specifies whether this dashboard should be deployed.
+        enabled: true
+        # --configmaps to be deployed that contain a grafana dashboard.
+        configMap:
+            # -- name specifies the name for the configmap.
+            name: falcosidekick-loki-dashboard-grafana
+            # -- namespace specifies the namespace for the configmap.
+            namespace: ""
+            # -- folder where the dashboard is stored by grafana.
+            folder: ""
 
   grafanaoncall:
     # -- if not empty, Grafana OnCall output is enabled
