--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -115,6 +115,23 @@ prometheusRules:
       threshold: 0
     additionalAlerts: {}
 
+# -- grafana contains the configuration related to grafana.
+grafana:
+  # -- dashboards contains configuration for grafana dashboards.
+  dashboards:
+    # -- enabled specifies whether the dashboards should be deployed.
+    enabled: false
+    # --configmaps to be deployed that contain a grafana dashboard.
+    configMaps:
+      # -- falcosidekick contains the configuration for falcosidekick's dashboard.
+      falcosidekick:
+        # -- name specifies the name for the configmap.
+        name: falcosidekick-grafana-dashboard
+        # -- namespace specifies the namespace for the configmap.
+        namespace: ""
+        # -- folder where the dashboard is stored by grafana.
+        folder: ""
+
 config:
   # -- Existing secret with configuration
   existingSecret: ""
