--- a/charts/falco-talon/templates/configmap.yaml
+++ b/charts/falco-talon/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "falco-talon.name" . }}-rules
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "falco-talon.labels" . | nindent 4 }}
 data:
