update(falco): use new falco images
More info at: https://github.com/falcosecurity/falco/issues/3165

Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -10,7 +10,7 @@ image:
   # -- The image registry to pull from.
   registry: docker.io
   # -- The image repository to pull from
-  repository: falcosecurity/falco-no-driver
+  repository: falcosecurity/falco
   # -- The image tag to pull. Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
