--- a/charts/falco/Chart.yaml
+++ b/charts/falco/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: falco
-version: 4.18.0
-appVersion: "0.40.0-rc1"
+version: 4.19.0
+appVersion: "0.40.0"
 description: Falco
 keywords:
   - monitoring
