new(falco): adding imagePullSecrets at the service account level
Signed-off-by: Ignacio Íñigo <megalucio@users.noreply.github.com>

--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -27,6 +27,8 @@ namespaceOverride: ""
 podAnnotations: {}
 
 serviceAccount:
+  # -- Secrets containing credentials when pulling from private/secure registries.
+  imagePullSecrets: []
   # -- Specifies whether a service account should be created.
   create: true
   # -- Annotations to add to the service account.
