--- a/charts/falco/ci/ci-values.yaml
+++ b/charts/falco/ci/ci-values.yaml
@@ -1,15 +1,10 @@
 # CI values for Falco.
-# The following values will bypass the installation of the kernel module
-# and disable the kernel space driver.
-
-# disable the kernel space driver
-driver:
-  enabled: false
 
 # make Falco run in userspace only mode
 extra:
   args:
-    - --userspace
+    - -o
+    - engine.kind=nodriver
 
 # enforce /proc mounting since Falco still tries to scan it
 mounts:
