update(event-generator): set chart as deprecated
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/charts/falco-exporter/Chart.yaml
+++ b/charts/falco-exporter/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: falco-exporter
-description: Prometheus Metrics Exporter for Falco output events
+deprecated: true
+description: DEPRECATED Prometheus Metrics Exporter for Falco output events
 
 # A chart can be either an 'application' or a 'library' chart.
 #
