--- a/charts/falcosidekick/templates/configmap-ui.yaml
+++ b/charts/falcosidekick/templates/configmap-ui.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.webui.enabled) (.Values.webui.redis.enabled) -}}
+{{- if .Values.webui.enabled -}}
 ---
 apiVersion: v1
 kind: ConfigMap
