fix: add an or condition for configmap
Co-authored-by: Igor Eulalio <41654187+IgorEulalio@users.noreply.github.com>
Signed-off-by: Aliloya <53705110+Aliloya-eng@users.noreply.github.com>

--- a/charts/falcosidekick/templates/configmap-ui.yaml
+++ b/charts/falcosidekick/templates/configmap-ui.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.webui.enabled -}}
+{{- if and (.Values.webui.enabled) (or (.Values.webui.redis.enabled) (.Values.webui.externalRedis.enabled)) -}}
 ---
 apiVersion: v1
 kind: ConfigMap
